test(checklist): add unit tests for CheckListMapper and CheckListServiceImp